# AegixPass

./: ALGORITHM.md  Cargo.toml  README.md  default.json
.github/workflows/: rust.yml
src/: core.rs  lib.rs  main.rs
